gccida/c3/mtherr
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/mtherr/src/real.c:6307:13: error: use of undeclared identifier 'off_71CE90'
warning( ( &off_71CE90)[code - 1], v3); 
            ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/mtherr/src/obj/real.o] Error 1
